<resources>
    <string name="app_name">Music LMS</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
...
    <string name="already_an_user_click_here_to_be_redirected_to_login_page">Already An User click here to be redirected to login page</string>
    <string name="create_account">Create account</string>
    <string name="user__signup__Im_a">"I'm a…"</string>

    <string name="title_activity_assignment_create_form">Create Assignment</string>
    <string name="assignment__form__user_class">Student To Assign</string>
    <string name="action_settings">Settings</string>
    <string name="assignment__form__assignment_name">Assignment Name</string>
    <string name="assignment__form__due_date">Due Date</string>
    <string name="assignment__form__add_todo_item">Add ToDo Item</string>
    <string name="assignment__form__reuse_todo_item">Reuse Item</string>
    <string name="assignment__form__cancel_assignment">Cancel</string>
    <string name="assignment__form__cancel">Cancel</string>
...
    <string name="user_profile_chat">Chat</string>
    <string name="form__delete_button">Delete</string>
    <string name="assignment__overview__user_label">Assignee</string>
    <string name="title_activity_user_search">Search for Users</string>
    <string name="title_activity_add_users">Add Users</string>
    <string name="title_activity_chat_landing">Chat with others</string>
    <string name="title_activity_user_main_profile">User Profile</string>
    <string name="title_activity_login">Log In</string>
    <string name="text_content">text</string>
    <string name="action_Language">Language</string>
    <string name="assignment__form__view_todos">To Do</string>
    <string name="form__view_button">View</string>
    <string name="title_activity_assignment_view">View Assignment</string>
...
    <string name="or_Register_an_account_here">or Register an account here</string>
    <string name="Preferred_Name">Preferred Name</string>
    <string name="Hi">Hi, I am ...</string>
    <string name="Teacher">Teacher</string>
    <string name="Student">Student</string>
    <string name="Select_Role">Select A Role To Continue</string>
    <string name="have_account">Already have an account? Login here</string>
    <string name="experience">I have experience ...</string>
    <string name="Sending">Sending a text message</string>
    <string name="Phone">Making a Phone call</string>
    <string name="Zoom">Joining a Zoom call</string>
    <string name="Schedule_Zoom">Schedule a Zoom call</string>
    <string name="Watching_YouTube">Watching a YouTube video</string>
...
