package com.themusicians.musiclms;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;
import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;
import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class A_LogInTest {

  @Rule
  public ActivityTestRule<MainActivity> mActivityTestRule =
      new ActivityTestRule<>(MainActivity.class);

  @Test
  public void a_LogInTest() {
    ViewInteraction appCompatTextView =
        onView(
            allOf(
                withId(R.id.toSignIn),
                withText("Already have an account? Login here"),
                childAtPosition(childAtPosition(withId(R.id.background_signup), 0), 6)));
    appCompatTextView.perform(scrollTo(), click());

    ViewInteraction appCompatEditText =
        onView(
            allOf(
                withId(R.id.myEmail),
                childAtPosition(
                    allOf(withId(R.id.container), childAtPosition(withId(android.R.id.content), 0)),
                    0),
                isDisplayed()));
    appCompatEditText.perform(replaceText("signup@test.com"), closeSoftKeyboard());

    ViewInteraction appCompatEditText2 =
        onView(
            allOf(
                withId(R.id.myPassword),
                childAtPosition(
                    allOf(withId(R.id.container), childAtPosition(withId(android.R.id.content), 0)),
                    1),
                isDisplayed()));
    appCompatEditText2.perform(replaceText("signup"), closeSoftKeyboard());

    ViewInteraction appCompatButton =
        onView(
            allOf(
                withId(R.id.signin),
                withText("Sign In"),
                childAtPosition(
                    allOf(withId(R.id.container), childAtPosition(withId(android.R.id.content), 0)),
                    4),
                isDisplayed()));
    appCompatButton.perform(click());
  }

  private static Matcher<View> childAtPosition(
      final Matcher<View> parentMatcher, final int position) {

    return new TypeSafeMatcher<View>() {
      @Override
      public void describeTo(Description description) {
        description.appendText("Child at position " + position + " in parent ");
        parentMatcher.describeTo(description);
      }

      @Override
      public boolean matchesSafely(View view) {
        ViewParent parent = view.getParent();
        return parent instanceof ViewGroup
            && parentMatcher.matches(parent)
            && view.equals(((ViewGroup) parent).getChildAt(position));
      }
    };
  }
}
